--- a/src/main/front/src/components/MyPage.css
+++ b/src/main/front/src/components/MyPage.css
@@ -466,3 +466,10 @@
   border-radius: 4px;
   font-size: 16px;
 }
+
+
+.product-image {
+  max-width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+}
