--- a/src/main/front/src/components/ItemDetail.css
+++ b/src/main/front/src/components/ItemDetail.css
@@ -11,7 +11,10 @@
 .item-detail-image {
   width: 100%;
   height: auto;
+  max-width: 800px; /* 이미지의 최대 너비를 600px로 제한 */
+  max-height: 800px; /* 이미지의 최대 높이를 400px로 제한 */
   margin-bottom: 20px;
+  object-fit: contain; /* 이미지의 비율을 유지하면서 가능한 범위 내에서 맞춤 */
 }
 
 .tab-container {
